--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         
         <section>
             <h1 id="Home">Quem Sou</h1>
-
+                <br>
                 <p>Adriano G Carvalho</p>
                 <p>Engenheiro Civil e de Segurança do Trabalho.</p>
                 <p>Mestre em Engenharia Civil pela Universidade Federal do Rio de Janeiro.</p>
@@ -70,12 +70,55 @@
                 <p>Professor da Área de Construção Civil do IFTO - Campus Palmas.</p>
                 <p>Coordenador do Curso de Bacharelado em Engenharia Civil do IFTO - Campus Palmas.</p>
                 <p>Discente do curso Superior em Sistemas para Internet.</p>
+                <br>
                 <p>De qualquer sorte, vale ressaltar que o mais importante na nossa vida cotidiana é sempre buscar ser uma pessoa correta.</p>
+                <br>
                 <p>Neste sentido vou elencar aqui uma citação bastante interessante dita por <cite>Marco Túlio Cícero</cite>: <q>Viver feliz não é mais do que viver com honestidade e retidão. </q>
         </section>
- 
         <br>
         <br>
+
+        <section>
+            <h1 id="Equipe">Equipe de Trabalho de Projeto de Pesquisa em Andamento</h1>
+            <br>
+            <br>
+            <p>
+                <img id="Pesquisa" src="/Imagens/Imagem 1 - 1600w.jpeg" alt="Equipe de projeto de pesquisa">
+
+                <img srcset="Imagens/Imagem 1 - 360w.jpeg 360w,
+                            Imagens/Imagem 1 - 480w.jpeg 480w,
+                            Imagens/Imagem 1 - 800w.jpeg 800w,
+                            Imagens/Imagem 1 - 1280w.jpeg 1920w"
+                     sizes="(max-width: 480px) 360px,
+                            (max-width: 800px) 480px,
+                            (max-width: 1280px) 800px,
+                            1280px"
+                     src="Imagens/Imagem 1 - 1600w.jpeg">
+            </p>
+        </section>
+        <br>
+        <br>
+
+        <section>
+            <h1 id="Projeto">Grupo de Trabalho de Projeto de Extensão em Andamento</h1>
+            <br>
+            <br>
+            <p>
+                <img id="Extensão" src="/Imagens/Imagem 2 - 1280w.jpeg" alt="Grupo de trabalho de projeto de extensão">
+                
+                <img srcset="Imagens/Imagem 2 - 360w.jpeg 360w,
+                            Imagens/Imagem 2 - 480w.jpeg 480w,
+                            Imagens/Imagem 2 - 800w.jpeg 800w,
+                            Imagens/Imagem 2 - 1280w.jpeg 1920w"
+                     sizes="(max-width: 480px) 360px,
+                            (max-width: 800px) 480px,
+                            (max-width: 1280px) 800px,
+                            1280px"
+                     src="Imagens/Imagem 2 - 1280w.jpeg">
+            </p>
+
+        </section>
+
      </article>
     <!--Página criada em 06-11-2022 às 09:00hs.-->
 </body>
