Usando flex-box

--- a/index.html
+++ b/index.html
@@ -48,9 +48,8 @@
             <li><a href="http://www.instagram.com">Redes Sociais</a></li>
         </ul>
     </nav>
-    <br>
-    <br>
-    <article>
+        <br>
+        <br>
         <a href="http://lattes.cnpq.br/8261115135036352"><img src="Foto_Adriano1.png" alt="Foto do Adriano" style="border-radius:50%" title="Conheça meu Currículo Lattes"></a>
         <br>
         <br>
@@ -59,30 +58,54 @@
         </h1>
         <br>
         <br>
-        
-        <section>
-            <h1 id="Home">Quem Sou</h1>
+        <section>    
+            <article>
+                <h1 id="Home">Quem Sou</h1>
                 <br>
                 <p>Adriano G Carvalho</p>
+                <br>
+            </article>
+            <br>
+
+            <article>
+                <h1>Formação Principal</h1>
+                <br>
                 <p>Engenheiro Civil e de Segurança do Trabalho.</p>
+                <br>
                 <p>Mestre em Engenharia Civil pela Universidade Federal do Rio de Janeiro.</p>
+                <br>
                 <p>Doutor em Ciências do Ambiente pela Universidade Federal do Tocantins.</p>
+                <br>
+            </article>
+            <br>
+
+            <article>
+                <h1>Atuação Principal</h1>
+                <br>
                 <p>Professor da Área de Construção Civil do IFTO - Campus Palmas.</p>
+                <br>
                 <p>Coordenador do Curso de Bacharelado em Engenharia Civil do IFTO - Campus Palmas.</p>
+                <br>
                 <p>Discente do curso Superior em Sistemas para Internet.</p>
+                <br>
+            </article>
+            <br>
+
+            <article>
+                <h1>Mensagem para Refletir</h1>
                 <br>
                 <p>De qualquer sorte, vale ressaltar que o mais importante na nossa vida cotidiana é sempre buscar ser uma pessoa correta.</p>
                 <br>
                 <p>Neste sentido vou elencar aqui uma citação bastante interessante dita por <cite>Marco Túlio Cícero</cite>: <q>Viver feliz não é mais do que viver com honestidade e retidão. </q>
-        </section>
-        <br>
-        <br>
+            <br>
+            </article>
+            <br>
+            <br>
 
-        <section>
-            <h1 id="Equipe">Equipe de Trabalho de Projeto de Pesquisa em Andamento</h1>
-            <br>
-            <br>
-            <p>
+            <article>
+                <h1 id="Equipe">Equipe de Trabalho de Projeto de Pesquisa em Andamento</h1>
+                <br>
+                <p>
                 <img id="Pesquisa" src="/Imagens/Imagem 1 - 1600w.jpeg" alt="Equipe de projeto de pesquisa">
 
                 <img srcset="Imagens/Imagem 1 - 360w.jpeg 360w,
@@ -94,16 +117,15 @@
                             (max-width: 1280px) 800px,
                             1280px"
                      src="Imagens/Imagem 1 - 1600w.jpeg">
-            </p>
-        </section>
-        <br>
-        <br>
+                </p>
+            </article>
+            <br>
+            <br>
 
-        <section>
-            <h1 id="Projeto">Grupo de Trabalho de Projeto de Extensão em Andamento</h1>
-            <br>
-            <br>
-            <p>
+            <article>
+                <h1 id="Projeto">Grupo de Trabalho de Projeto de Extensão em Andamento</h1>
+                <br>
+                <p>
                 <img id="Extensão" src="/Imagens/Imagem 2 - 1280w.jpeg" alt="Grupo de trabalho de projeto de extensão">
                 
                 <img srcset="Imagens/Imagem 2 - 360w.jpeg 360w,
@@ -115,11 +137,11 @@
                             (max-width: 1280px) 800px,
                             1280px"
                      src="Imagens/Imagem 2 - 1280w.jpeg">
-            </p>
+                </p>
 
-        </section>
+            </article>
 
-     </article>
+    </section>
     <!--Página criada em 06-11-2022 às 09:00hs.-->
 </body>
 
