--- a/index.html
+++ b/index.html
@@ -106,17 +106,17 @@
                 <h1 id="Equipe">Equipe de Trabalho de Projeto de Pesquisa em Andamento</h1>
                 <br>
                 <p>
-                <img id="Pesquisa" src="/Imagens/Imagem 1 - 1600w.jpeg" alt="Equipe de projeto de pesquisa">
+                <!-- /*<img id="Pesquisa" src="/Imagens/Imagem 1 - 1600w.jpeg" alt="Equipe de projeto de pesquisa">*/ -->
 
-                <img srcset="Imagens/Imagem 1 - 360w.jpeg 360w,
-                            Imagens/Imagem 1 - 480w.jpeg 480w,
-                            Imagens/Imagem 1 - 800w.jpeg 800w,
-                            Imagens/Imagem 1 - 1280w.jpeg 1920w"
+                <img srcset="Imagens/Imagem1360w.jpeg 360w,
+                            Imagens/Imagem1480w.jpeg 480w,
+                            Imagens/Imagem1800w.jpeg 800w,
+                            Imagens/Imagem11280w.jpeg 1920w"
                      sizes="(max-width: 480px) 360px,
                             (max-width: 800px) 480px,
                             (max-width: 1280px) 800px,
                             1280px"
-                     src="Imagens/Imagem 1 - 1600w.jpeg">
+                     src="Imagens/Imagem11280w.jpeg">
                 </p>
             </article>
             <br>
@@ -126,17 +126,17 @@
                 <h1 id="Projeto">Grupo de Trabalho de Projeto de Extensão em Andamento</h1>
                 <br>
                 <p>
-                <img id="Extensão" src="/Imagens/Imagem 2 - 1280w.jpeg" alt="Grupo de trabalho de projeto de extensão">
+                <!-- <img id="Extensão" src="/Imagens/Imagem 2 - 1280w.jpeg" alt="Grupo de trabalho de projeto de extensão"> -->
                 
-                <img srcset="Imagens/Imagem 2 - 360w.jpeg 360w,
-                            Imagens/Imagem 2 - 480w.jpeg 480w,
-                            Imagens/Imagem 2 - 800w.jpeg 800w,
-                            Imagens/Imagem 2 - 1280w.jpeg 1920w"
+                <img srcset="Imagens/Imagem2360w.jpeg 360w,
+                            Imagens/Imagem2480w.jpeg 480w,
+                            Imagens/Imagem2800w.jpeg 800w,
+                            Imagens/Imagem21280w.jpeg 1920w"
                      sizes="(max-width: 480px) 360px,
                             (max-width: 800px) 480px,
                             (max-width: 1280px) 800px,
                             1280px"
-                     src="Imagens/Imagem 2 - 1280w.jpeg">
+                     src="Imagens/Imagem21280w.jpeg">
                 </p>
 
             </article>
